@@ -61,6 +61,11 @@ Ctrl+End, Ctrl+Up, Ctrl+Down</dt>
 <p>Navigate in the game: beginning, ten moves backward, backward, forward, ten
 moves forward, end, previous variation, next variation.</p>
 </dd>
+<dt>Shift+F6</dt>
+<dd>
+<p>Like <i>Find Move</i> (F6) but iterates backwards through the list of legal
+moves.</p>
+</dd>
 <dt>Alt</dt>
 <dd>
 <p>Open menu.</p>
