@@ -65,6 +65,11 @@ Strg+Umschalt+Rechts, Strg+Ende, Strg+Oben, Strg+Unten</dt>
 <p>Im Spiel navigieren: Anfang, zehn Züge zurück, zurück, vorwärts, zehn Züge
 vorwärts, Ende, vorherige Variante, nächste Variante.</p>
 </dd>
+<dt>Shift+F6</dt>
+<dd>
+<p>Wie <i>Zug finden</i> (F6), jedoch wird rückwärts durch die Liste der
+legalen Züge iteriert.</p>
+</dd>
 <dt>Alt</dt>
 <dd>
 <p>Menü öffnen.</p>
