@@ -22,6 +22,8 @@ Version 15.UNKNOWN (master)
 * Reintroduced forward10/backward10 toolbuttons on desktop.
 * New shortcut keys for moving the selected piece in larger steps
   on the board and for rotating and flipping it.
+* New shortcut Shift+F6, which behaves like F6 (Find Move) but iterates
+  backwards through the list of legal moves.
 * Analysis speed dialog is now also available on Android (only fast and
   normal speed)
 * The translation source strings for menu items and actions no longer use
